--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/skieurfoufou/test/issues"
   },
-  "homepage": "https://github.com/skieurfoufou/test#readme"
+  "homepage": "https://github.com/skieurfoufou/test#readme",
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "mongoose": "^6.2.1"
+  }
 }
